@@ -1,6 +1,10 @@
 Revision history for Path-Class-Rule
 
 {{$NEXT}}
+  
+  [NEW FEATURES]
+
+    - Added 'skip_vcs' (and individual VCS skip methods)
 
 0.002     2011-09-12 14:17:13 America/New_York
 
